# sso-gcp-fastapi

./: .gitignore  README.md  chat_history.db  instructions.md  project_structure.txt
backend_fastapi/: README.md  alembic.ini  chat_history.db  database.py  example.env  main.py  models.py  pyproject.toml
backend_fastapi/alembic/: env.py
backend_fastapi/alembic/versions/: ec4c672844fe_add_user_model_and_link_conversation_.py
frontend_angular/: package-lock.json  package.json
frontend_angular/src/app/: app.component.css  app.component.html  app.component.ts  app.config.ts  app.routes.ts
frontend_angular/src/app/admin/: admin.component.html  admin.component.ts
frontend_angular/src/app/auth/: admin.guard.ts  auth.guard.ts  auth.interceptor.ts  auth.service.ts
frontend_angular/src/app/auth/auth-callback/: auth-callback.component.ts
frontend_angular/src/app/chat/: chat.component.css  chat.component.html  chat.component.ts  chat.service.ts
frontend_angular/src/app/login/: login.component.html  login.component.ts
frontend_angular/src/app/profile/: profile.component.html  profile.component.ts
